--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 <body>
 
-    <h1 id="btn" style="color: red;background-color: bisque;">Welcome to HTML</h1>
+    <h1  style="color: red;background-color: bisque;padding: 20px; margin: 20px;">Welcome to HTML</h1>
     <p class="para">welcome to Style tag</p>
     <button id="btn">login</button>
     <h3>hello</h3>
+
+    <div style="height: 350px; width: 500px;background-image: linear-gradient(to right,red,blue);">
+
+    </div>
+
+
+    
+
     
 </body>
 </html>
